Fixed not showing unpublished blog

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -320,6 +320,7 @@ footer {
 	width: 100%;
 	.navbar-item {
 		background-color: white !important;
+		cursor: pointer;
 		img {
 			max-height: 2.75rem !important;
 		}
